fix some lines being too short

--- a/assets/css/common/blocks.scss
+++ b/assets/css/common/blocks.scss
@@ -133,6 +133,7 @@ a.block__header--single-item, .block__header a {
   padding: 6px $header_spacing;
   background: $background_color;
   border: $border;
+  line-height: 1.35;
 }
 
 .block--fixed--sub {
